# GGCStarter

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: .gitignore  main.c.D589EB9F3A941A2C.idx
src/: main.c
